# fragmind-pigeon

./: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  pigeon
bindings/c/: fragpigeon.h
bindings/python/: fragpigeon.py  fragpigeon_numpy.py  pyproject.toml  test_attach.py  test_cross_language.py  test_fragpigeon.py  test_numpy.py
cmd/pigeon/: main.go
docs/: EXPLAINER.md  RDMA-SETUP.md  TEST-REPORT.md  architecture.md  python-bindings.md  testing.md  wire-protocol.md
examples/coi_dump/: main.go
examples/coi_list/: main.go
examples/coi_register/: main.go
examples/coi_watch/: main.go
examples/gorch_distributed/: main.go
examples/gorch_gpt_distributed/: main.go
examples/gorch_gpt_training/: main.go
examples/loa_weight_demo/: main.go
examples/local_ring_demo/coord/: main.go
examples/local_ring_demo/receiver/: main.go
examples/multiprocess_demo/: run.sh
examples/rdma_demo/: main.go
examples/scripts/: two_pigeons_local.sh
pkg/fragpigeon/: attach.go  backpressure.go  bench_test.go  coi.go  defaults_all.go  defaults_darwin.go  defaults_linux.go  e2e_test.go  forward_quic.go  forward_stub.go  gossip_quic.go  gossip_rdma.go  gossip_stub.go  header.go  header_test.go  loa.go  loa_multi.go  loa_multi_test.go  loa_ring.go  loa_test.go  peers.go  peers_factory_quic.go  peers_factory_stub.go  peers_quic.go  peers_rdma.go  peers_stub.go  pigeon.go  rdma_types.go  ring.go  ring_create.go  router.go  router_test.go  schema.go  schema_test.go
proof/: baselines.go  fragmind.go  harness.go  proof_test.go  run.sh
(+5 files in other folders)
